[tool.poetry]
name = "cqsim"
version = "0.1.0"
description = ""
authors = ["Cameron Reid <csreid.cr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
mypy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude=[
  "src.eltura.scripts",
  "src.eltura.adhoc_analysis",
  "src.eltura.portfolio_management"
]
ignore_missing_imports = true
disable_error_code = [
  "import-untyped",
  "no-redef"
]

[tool.poe.tasks]
lint = "ruff check src"
typecheck = "mypy --config-file pyproject.toml src"
format = "ruff format src"
test = "pytest test/eltura-test"
check = ["format", "lint", "typecheck", "test"]
