[project]
name = "my_client"
version = "0.1"
description = "CQSim is an open-source, discrete-event driven cluster scheduling simulator"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
cqsim = "src/cqsim.py"

[tool.poetry]
name = "cqsim"
version = "0.1.0"
description = ""
authors = ["Cameron Reid <csreid.cr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
mypy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = [
  "import-untyped",
  "no-redef"
]

[tool.ruff.format]
indent-style = "tab"

[tool.poe.tasks]
lint = "ruff check src"
typecheck = "mypy --config-file pyproject.toml src"
format = "ruff format src"
check = ["format", "lint", "typecheck"]
